<!--
 * Copyright (c) 2019, Okta, Inc. and/or its affiliates. All rights reserved.
 * The Okta software accompanied by this notice is provided pursuant to the Apache License, Version 2.0 (the "License.")
 *
 * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *
 * See the License for the specific language governing permissions and limitations under the License.
-->
<resources>
    <string name="app_name">Okta Browser Sign In</string>
    <string name="browser_sample">Browser Sample</string>
    <string name="have_account">Have an account?</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="init_error">Error during init</string>
    <string name="auth_canceled">Authorization Canceled</string>
    <string name="operation_cancel">Operation canceled</string>
    <string name="sign_out_canceled">Sign Out Canceled</string>
    <string name="sign_out_success">Sign Out Success</string>
    <string name="sign_out_error">Sign Out Error</string>
    <string name="user_name_title">Username:</string>
    <string name="name_title">Name:</string>
    <string name="locale_title">Locale:</string>
    <string name="zoneinfo_title">Zone Info:</string>
    <string name="refresh_token_btn">Refresh token</string>
    <string name="access_token_btn">Access token</string>
    <string name="id_token_btn">IdToken</string>
    <string name="clear_data">Clear data</string>
    <string name="revoke_tokens">Revoke tokens</string>
    <string name="sign_out_btn">Sign out</string>
    <string name="token_refreshed_successfully">Token refreshed successfully</string>
    <string name="error_message">Error</string>
    <string name="not_authorized">You aren\'t authorized</string>
    <string name="user_info_loading">Fetching user info</string>
    <string name="access_token_loading">Refreshing access token</string>
    <string name="progress_dialog_message">Please wait! This may take a moment.</string>
    <string name="unable_to_revoke_tokens">Unable to revoke tokens</string>
    <string name="tokens_revoke_success">Tokens revoked successfully</string>
    <string name="welcome_title">Welcome, %s</string>
    <string name="timezone_title">Timezone</string>
    <string name="last_update_title">Last Updated</string>
    <string name="view_tokens_title">View Tokens</string>
    <string name="view_details_title">View Details</string>
    <string name="protect_by_smartlock">Protect by SmartLock</string>
    <string name="ask_to_protect_by_smartlock">Do you want to protect data by SmartLock</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="fingerprint_title">Authenticate</string>
    <string name="fingerprint_failed">Authentication failed.</string>
    <string name="fingerprint_success">Authentication successful!</string>
    <string name="setup_lockscreen_info_msg">Secure lock screen isn\'t set up.\nGo to \'Settings -> Security -> Screenlock\' to set up a lock screen</string>
    <string name="hardware_not_support_fingerprint">Your device does not have a supported fingerprint</string>
    <string name="fingerprint_not_enrolled">You haven\'t enrolled any fingerprints yet.\nGo to \'Settings -> Security to enroll at least one finger</string>
    <string name="fingerprint_alert_title">Confirm fingerprint to continue</string>
    <string name="cancel">Cancel</string>
    <string name="fingerprint_status">Touch sensor</string>

    <string name="select_smartlock_type_title">Select smartlock type</string>
    <string name="select_smartlock_type_message">Please select a way to authenticate</string>
    <string name="fingerprint_type">Fingerprint</string>
    <string name="unlock_screen_type">Unlock Screen</string>
    <string name="unlock_screen_title">Confirm credentials</string>
    <string name="invalid_keys">Invalid keys</string>
    <string name="enable_smart_lock">Enable Smart Lock</string>
</resources>
