...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/view_token_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/toll_icon"
        android:drawablePadding="4dp"
        android:text="@string/view_tokens_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/clear_data_btn"
        style="@style/OktaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/clear_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/revoke_tokens_btn"
        style="@style/OktaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/revoke_tokens"
        app:layout_constraintStart_toEndOf="@+id/clear_data_btn"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/logout_btn"
        style="@style/OktaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sign_out_btn"
        app:layout_constraintStart_toEndOf="@+id/revoke_tokens_btn"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smartlock_enable">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
...
                app:layout_constraintBottom_toTopOf="@+id/refreshtoken_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/idtoken_textview_title"
                app:layout_constraintTop_toBottomOf="@+id/accesstoken_textview" />

            <Button
                android:id="@+id/refresh_token"
                style="@style/OktaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
...
